# DeepResearchHybrid

./: .gitignore  README.md  agent_config.py  agent_helpers.py  main.py  mcp_server.py  pyproject.toml  report_what_are_the_core_arguments_in_favor_of_and_agains_3aa8b765.md  requirements.txt  test_parser.py
documentation/: Chapter_1_2.tex
documentation/chapters/: ch0.5.md  ch0.txt  ch1.md  ch1.txt  ch2.txt  ch3.md  ch4.md  ch5.md  ch6.md
my-local-serach/searxng/: settings.yml
research/: __init__.py  actions.py  analysis.py  pipeline.py  planning.py  state.py  synthesis.py  ui.py
